--- a/src/app/protected/dashboard/dashboard.component.html
+++ b/src/app/protected/dashboard/dashboard.component.html
@@ -4,7 +4,7 @@
 <p>Esta página solo debería funcionar si estás autenticado</p>
 
 <h4>User info</h4>
-<pre> ... </pre>
+<pre> {{ usuario | json }} </pre>
 
 <button (click)="logout()">
     Logout
